--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
+        <p>Know more about me</p>
       </div>
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img src="assets/img/johnn.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>SOFTWARE DEVELOPER &amp; ENGINEER</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            I am John Oseni, a secondary school developer who has seen fun in coding and problem solving, it has really helped me, because i can
+            boldy say i write python, HTML, CSS, JavaScript, nodejs, erlang, dart, and other related technologies.
           </p>
           <div class="row">
             <div class="col-lg-6">
