--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4th Feb. 2005</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.johnoseni.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:johnoseni26@gmail.com">johnoseni26@gmail.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+2347031142347">+234 703 1142 347</a></span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Akure, Nigeria</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>16</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
