--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            I have been able to gain experience from working with some of the companies in lagos, which has really helped in the line of coding,
+            i now can work with blockchain technologies, create heavy applications which can be used by so many users, and also be able to debug so 
+            many errors in most major programming laguages.
           </p>
         </div>
       </div>
