--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="counts container">
 
       <div class="row">
-
+        <h2>About</h2>
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
