--- a/index.html
+++ b/index.html
@@ -227,25 +227,25 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line" style="color: #ffbb2c;"></i>
+            <i class="icofont-file-python" style="color: #ffbb2c;"></i>
             <h3>Python</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+            <i class="icofont-file-javascript" style="color: #5578ff;"></i>
             <h3>Javascript</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-            <h3>Python</h3>
+            <h3>React js</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
+            <i class="ri-database-2-line" style="color: #e361ff;"></i>
             <h3>Mysql</h3>
           </div>
         </div>
@@ -263,7 +263,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
+            <i class="icofont-database-add" style="color: #11dbcf;"></i>
             <h3>MongoDb</h3>
           </div>
         </div>
@@ -281,19 +281,19 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-disc-line" style="color: #b20969;"></i>
+            <i class="icofont-bootstrap" style="color: #b20969;"></i>
             <h3>Bootstrap</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-base-station-line" style="color: #ff5828;"></i>
+            <i class="ri-html5-line" style="color: #ff5828;"></i>
             <h3>HTML</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+            <i class="ri-css3-line" style="color: #29cc61;"></i>
             <h3>CSS</h3>
           </div>
         </div>
