--- a/index.html
+++ b/index.html
@@ -394,7 +394,8 @@
 
       <div class="section-title">
         <h2>Services</h2>
-        <p>My Services</p>
+        <p>Services I render</p>
+        <span style="color: #e80368;">⚙🛠</span>
       </div>
 
       <div class="row">
