--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <div class="section-title">
         <h2>Services</h2>
         <p>Services I render</p>
-        <span style="color: #e80368;">⚙🛠</span>
+        <span style="color: rgb(219, 203, 56);">⚙🛠</span>
       </div>
 
       <div class="row">
