--- a/index.html
+++ b/index.html
@@ -394,8 +394,10 @@
 
       <div class="section-title">
         <h2>Services</h2>
-        <p>Services I render</p>
+        <div class="serviceboy">
+          <p>Services I render</p>
         <span style="color: rgb(219, 203, 56);">⚙🛠</span>
+        </div>
       </div>
 
       <div class="row">
