--- a/index.html
+++ b/index.html
@@ -394,10 +394,7 @@
 
       <div class="section-title">
         <h2>Services</h2>
-        <div class="serviceboy">
-          <p>Services I render</p>
-        <span style="color: rgb(219, 203, 56);">⚙🛠</span>
-        </div>
+          <p>Services I render <span style="color: rgb(219, 203, 56);">⚙🛠</span></p>
       </div>
 
       <div class="row">
