--- a/index.html
+++ b/index.html
@@ -402,7 +402,9 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-laptop"></i></div>
             <h4><a href="">Web Development</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <p>Through my knowledge on HTML, CSS and Javascript, with Node, 
+              i can make a full responsive website
+            </p>
           </div>
         </div>
 
@@ -410,7 +412,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="">API Development/application</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <p>My knownledge on APIS can help you to make web base server</p>
           </div>
         </div>
 
@@ -418,7 +420,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-wrench"></i></div>
             <h4><a href="">Backend Aplication/Development</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <p>With my kowledge on PHP and nodejs i am able to integrate and link so may elements together in development in general</p>
           </div>
         </div>
 
@@ -426,7 +428,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
             <h4><a href="">Blockchain Technologies</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <p>with my knowledge in C#, Python, it would be very easy to create blockchain technologies</p>
           </div>
         </div>
 
@@ -434,7 +436,9 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-mobile"></i></div>
             <h4><a href="">Mobile App Development</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <p>I prefer writing flutter which supports both android and IOS which is very useful for creating
+              both mobile apps, and web applications
+            </p>
           </div>
         </div>
 
@@ -442,7 +446,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-data"></i></div>
             <h4><a href="">Database integration/management</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <p>With my knowledge on mysql database, firebase, and mongodb integration it is very easy to help search and call from database</p>
           </div>
         </div>
 
