--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>24kionz</h4>
-              <p>App</p>
+              <p>Web App</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html"><i class="bx bx-link"></i></a>
+                <a href="https://koinzz.herokuapp.com/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
