--- a/index.html
+++ b/index.html
@@ -467,10 +467,10 @@
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
+            <li data-filter="*" class="filter-active">ALL</li>
+            <li data-filter=".filter-app">FRONTEND</li>
+            <li data-filter=".filter-card">BLOCKCHAIN</li>
+            <li data-filter=".filter-web">WEB APP</li>
           </ul>
         </div>
       </div>
