--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>My Works</p>
+        <p>Recent Works</p>
       </div>
 
       <div class="row">
