--- a/index.html
+++ b/index.html
@@ -479,12 +479,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/24koinz.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>24kionz</h4>
               <p>Web App</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/24koinz.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="https://koinzz.herokuapp.com/"><i class="bx bx-link"></i></a>
               </div>
             </div>
