--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
               <h4>24kionz</h4>
               <p>Web App</p>
               <div class="portfolio-links">
-                <a href="assets/img/24koinz.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/24koinz.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="24koinz"><i class="bx bx-plus"></i></a>
                 <a href="https://koinzz.herokuapp.com/"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -498,7 +498,7 @@
               <h4>World-news</h4>
               <p>Web App</p>
               <div class="portfolio-links">
-                <a href="assets/img/world-news.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/world-news.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="World news"><i class="bx bx-plus"></i></a>
                 <a href="https://worldofnews.netlify.app/"><i class="bx bx-link"></i></a>
               </div>
             </div>
