--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/world.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>World-news</h4>
               <p>Web App</p>
