--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
               <h4>Dyclude</h4>
               <p>Blockchain</p>
               <div class="portfolio-links">
-                <a href="assets/img/dyclude.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Under Development"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/dyclude.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="This this is to let you knwo that this application is under development and will soon be available for all users"><i class="bx bx-plus"></i></a>
                 <a href="https://dyclude.netlify.app" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
