--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
               <p>Blockchain</p>
               <div class="portfolio-links">
                 <a href="assets/img/dyclude.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="This this is to let you knwo that this application is under development and will soon be available for all users"><i class="bx bx-plus"></i></a>
-                <a href="https://dyclude.netlify.app" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="https://dyclude.netlify.app" ><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -541,7 +541,7 @@
               <p>Web App</p>
               <div class="portfolio-links">
                 <a href="assets/img/cdssa.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="https://cdssa.netlify.app" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="https://cdssa.netlify.app"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
