--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
+          <!-- <li><a class="nav-link" href="#resume">Resume</a></li> -->
           <li><a class="nav-link" href="#services">Services</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
@@ -317,7 +317,7 @@
   </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
-  <section id="resume" class="resume">
+  <!-- <section id="resume" class="resume">
     <div class="container">
 
       <div class="section-title">
@@ -386,7 +386,7 @@
       </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section>End Resume Section -->
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
