--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4th Feb. 2005</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4th Feb</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:johnoseni26@gmail.com">johnoseni26@gmail.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+2347031142347">+234 703 1142 347</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Akure, Nigeria</span></li>
